[project]
name = "marktplaats-mcp"
version = "0.1.0"
description = "MCP server for searching Marktplaats.nl listings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
marktplaats-mcp = "marktplaats_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marktplaats_mcp"]
